tests/expectations/compiler/core/algorithms/pedersen64_commit_to_field.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `address` was found.
    --> compiler-test:27:52
     |
  27 |         let a: field = Pedersen64::commit_to_field(addr_value, scalar_value);
     |                                                    ^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `field` was found.
    --> compiler-test:29:52
     |
  29 |         let c: field = Pedersen64::commit_to_field(field_value, scalar_value);
     |                                                    ^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `group` was found.
    --> compiler-test:30:52
     |
  30 |         let d: field = Pedersen64::commit_to_field(group_value, scalar_value);
     |                                                    ^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `scalar` was found.
    --> compiler-test:37:52
     |
  37 |         let m: field = Pedersen64::commit_to_field(scalar_value, scalar_value);
     |                                                    ^^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `Foo` was found.
    --> compiler-test:39:52
     |
  39 |         let n: field = Pedersen64::commit_to_field(Foo { a: 1u16, b: 1u16 }, scalar_value);
     |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^
"""]
